@@ -53,6 +53,10 @@ class Par2Backend(backend.Backend):
             if hasattr(self.wrapped_backend, attr):
                 setattr(self, attr, getattr(self, attr[1:]))
 
+        # always declare _delete_list support because _delete queries file
+        # list for every call
+        self._delete_list = self.delete_list
+
     def transfer(self, method, source_path, remote_filename):
         """create Par2 files and transfer the given file and the Par2 files
         with the wrapped backend.
@@ -160,9 +164,14 @@ class Par2Backend(backend.Backend):
             c = re.compile(r'%s(?:\.vol[\d+]*)?\.par2' % filename)
             for remote_filename in remote_list:
                 if c.match(remote_filename):
-                    filename_list.append(remote_filename)
+                    # insert here to make sure par2 files will be removed first
+                    filename_list.insert(0, remote_filename)
 
-        return self.wrapped_backend._delete_list(filename_list)
+        if hasattr(self.wrapped_backend, '_delete_list'):
+            return self.wrapped_backend._delete_list(filename_list)
+        else:
+            for filename in filename_list:
+                self.wrapped_backend._delete(filename)
 
     def list(self):
         """
