@@ -10,6 +10,9 @@ New in v0.7.08 (2016/0?/??)
   - upload small files using non-chunked api
 * Fixed bug #1586934 with patches from Dmitry Nezhevenko
   - fixes error handling in wrapper
+* Fixed bug #1586992 with patches from Dmitry Nezhevenko
+  - Patch adds _delete_list to Par2Backend. And _delete_list fallbacks to
+    _delete calls if wrapped backend has no _delete_list.
 
 
 New in v0.7.07.1 (2016/04/19)
